--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <html>
    <head>
      <title> My Web Page </title>
+     <style type="text/css">
+        h1{
+         font-size: 24pt;  
+         color:red;
+         
+        }
+     </style>
    </head>
    <body>
     <p>
@@ -39,7 +46,7 @@
     <h2> <strong> The Clicklable Image </strong></h2>
     <p> This image is clickable, click on it and try. 
        <a href="https://www.biologyonline.com/dictionary/homo-sapiens-sapiens">
-          <img src="evolution-diagram.png">
+    <img src="evolution-diagram.png">
        </a> 
     </p>
  
@@ -67,15 +74,16 @@
        </tr>
     </tbody></table>
  
-    <pre>							What are homo sapiens?
+    <pre>						
+       	What are homo sapiens?
        Homo sapiens is the species of all the highly developed primates on earth,
        a category that living humans belong to.
        These primates include humans,
-                         apes,
-                         lorises,
-                         tarsiers,
-                         lemurs,
-                         monkeys.
+         apes,
+         lorises,
+         tarsiers,
+         lemurs,
+         monkeys.
     </pre>
  
     
