--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <html>
    <head>
      <title> My Web Page </title>
-     <style type="text/css">
+     <link rel="stylesheet" type="text/css" href="15_11_2021.css"/>
+     <!-- This is a comment line -->
+   <!--
+        <style type="text/css">
         h1{
          font-size: 24 pt;  
          color:red;
@@ -17,7 +20,8 @@
            background-color: lightgrey;
            font-weight: bold;
         }
-     </style>
+     </style> -->
+
    </head>
    <body>
     <p>
