new files has been added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <head>
      <title> My Web Page </title>
      <link rel="stylesheet" type="text/css" href="15_11_2021.css"/>
+    
      <!-- This is a comment line -->
    <!--
         <style type="text/css">
@@ -27,6 +28,12 @@
    onresize="document.body.style.backgroundColor='lightblue'"
    onkeydown="document.body.style.backgroundColor='white'"
    onkeyup="document.body.style.backgroundColor='lightyellow'">
+   <div class="navigation-bar">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact Us</a>
+      <a href="form.html">Form</a>
+   </div>
     <p>
       <strong> Introduction to Information Systems </strong>
     </p>
