--- a/form.html
+++ b/form.html
@@ -7,48 +7,48 @@
     <fieldset>
            <legend>FORM</legend>
        <div>
-    <label>Name & Surname</label>
-    <input>
+    <label for="name">Name & Surname</label>
+    <input id="name" placeholder="Username">
   </div>
   <div>
-    <label>Student ID</label>
-    <input>
+    <label for="ID">Student ID</label>
+    <input id="ID" placeholder="Student ID">
 </div>
 <div>
-    <label>Age</label>
-    <input type="number" value="0">
+    <label for="age">Age</label>
+    <input id="age" type="number" min="0" max="150" value="0">
 </div>
 <div>
-    <label>Email</label>
-    <input type="email">
+    <label for="email">Email</label>
+    <input id="email" type="email" placeholder="Email">
 </div>
 <div>
-    <label>Birthdate</label>
-    <input type="date">
+    <label for="date">Birthdate</label>
+    <input id="date" type="date">
 </div>
 <div>
-    <label>Password</label>
-    <input type="password">
+    <label for="pw">Password</label>
+    <input id="pw" type="password" placeholder="password">
 </div>
 <div>
-    <label>I read the assignment description well.</label>
-    <input type="checkbox">
+    <label for="cbox">I read the assignment description well.</label>
+    <input id="cbox" type="checkbox">
 </div>
 <div>
-    <label>I asked my friends what to do.</label>
-    <input type="checkbox">
+    <label for="cbox2">I asked my friends what to do.</label>
+    <input id="cbox2" type="checkbox">
 </div>
 <div>
-    <label>I read the assignment description well.</label>
-    <input type="radio" name="radiobutton">
+    <label for="rbutton">I read the assignment description well.</label>
+    <input id="rbutton" type="radio" name="radiobutton">
 </div>
 <div>
-    <label>I asked my friends what to do.</label>
-    <input type="radio" name="radiobutton">
+    <label for="rbutton2">I asked my friends what to do.</label>
+    <input id="rbutton2" type="radio" name="radiobutton">
 </div>
 <div>
-    <label>Others</label>
-    <textarea></textarea>
+    <label for="other">Others</label>
+    <textarea id="other" placeholder="write something down"></textarea>
 </div>
 <div>
     <button type="reset">Reset</button>
